--- a/03_BoxModel/07_exercicio_curriculo.css
+++ b/03_BoxModel/07_exercicio_curriculo.css
@@ -12,15 +12,15 @@ h2{
     background-color: #ccc;
     border-bottom: solid #7a7a7a 3px;
 }
-h4{
-
+ul{
+    padding-left: 0px;
 }
-
-
-
-.formacao{
-    
-        font-weight: bold;
-
-
+li{
+    list-style-position: inside;
+}
+a{
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
 }
