--- a/03_BoxModel/07_exercicio_curriculo.css
+++ b/03_BoxModel/07_exercicio_curriculo.css
@@ -1,5 +1,12 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
+    margin: auto;
+    width: 80%;
+    padding-bottom: 35px;
+}
+.centraliza{
+    text-align: center;
+    margin-top: 0px;
 }
 h1{
     text-align: center;
