--- a/05_Estrutura_semantica_posicionamento/01_projeto-1.css
+++ b/05_Estrutura_semantica_posicionamento/01_projeto-1.css
@@ -1,7 +1,7 @@
 body{
     background-color: #ccc;
     font-family: Arial, Helvetica, sans-serif;
-    width: 1200px;
+    width: 80%;
     margin: auto;
     
 }
