--- a/11_Projeto_Desafio_Flexbox/styles/estilo.css
+++ b/11_Projeto_Desafio_Flexbox/styles/estilo.css
@@ -2,17 +2,19 @@ html,
 body {
     height: 100%;
     background-image: url(../imagens/bg-2.jpg);
+
 }
 
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+
 }
 
 
 .top{
     text-align: center;
-    margin: 80px auto 0;
+    margin: 80px auto 40px;
     width: 80%;
     /* margin-bottom: 25px; */
     
@@ -21,9 +23,9 @@ body {
 .top h1{
     text-transform: uppercase;
     color: white;
-    font-size: 46px;
+    font-size: 66px;
     text-shadow: 2px 2px 2px black;
-    /* margin-top: 56px; */
+
 }
 
 .top p{
@@ -31,20 +33,41 @@ body {
     color: white;
     background-color: rgba(0, 0, 0, .7);
     border-bottom: 2px solid white;
-    padding: 16px;
+    padding: 26px;
     display: inline-block;
-    margin: 0 0 10;
+    margin: 0 0 10px;
+
+
 }
 .team{
 display: flex;
+flex-wrap: wrap;
+justify-content: center;
+align-content: center;
 background-color: white;
-margin: 50px;
-width: 650px;
+margin: auto;
+margin-bottom: 25px;
+width: 90%;
+max-width: 1100px;
+/* max-height: 400px; */
 }
 
 .team div{
-    margin: 8px;
-    flex-wrap: wrap;
-    align-content: center;
+    margin: 20px 15px 0;
+    margin-bottom: 0;
+    
+}
+
+.team img{
+    margin-bottom: 0;
+}
+
+.team p{
+    
+    font-size: 20px;
+    background-color: rgba(0, 0, 0, .7);
+    color: white;
+    padding: 10px;
+    margin-top: 0
 
 }
