--- a/13_ProjetoAprenser-inicio/styles/style.css
+++ b/13_ProjetoAprenser-inicio/styles/style.css
@@ -17,6 +17,10 @@ p, a {
     font-size: 1.6rem;
 }
 
+h1 {
+    font-size: 4.8rem;
+}
+
 nav a {
     /* inherit - faz herdar a propriedade do elemento pai */
     color: inherit;
@@ -24,6 +28,14 @@ nav a {
 
 .upper {
     text-transform: uppercase;
+}
+
+.btn {
+    background-color: var(--primary-color);
+    border-radius: 4px;
+    font-size: 1.8rem;
+    text-decoration: none;
+    padding: 1.6rem 4.6rem;
 }
 
 /* Inicio Logo / Menu */
@@ -61,6 +73,8 @@ nav a {
 }
 
 .wrapperContainer-hero {
+    /* background-color: var(--primary-color); */
+    background-image: linear-gradient(transparent, #fefe86);
 
 }
 
@@ -78,4 +92,22 @@ nav a {
     margin: auto;
 }
 
-/*  */
+/* Inicio Hero Banner */
+
+.heroBanner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20rem;
+}
+
+.header_content {
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+
+}
+
+.header_content a {
+    width: 10rem;
+}
