--- a/16_Formularios/styles/login.css
+++ b/16_Formularios/styles/login.css
@@ -55,13 +55,25 @@ legend{
 }
 
 .btn{
-    width: fit-content;
-    margin-left: auto;
     background-color: #95A5A6;
     color: white;
     cursor: pointer;
 }
+
+.btn--apagar{
+    background-color: rgb(118, 19, 19);
+}
+
+.btn--apagar:hover{
+    background-color: rgb(121, 65, 65);
+}
 .btn:hover{
     background-color: #bbb;
 }
+
+.action {
+    display: flex;
+    gap: 6.4rem;
+}
+
 
