--- a/18_Projeto_Login_cadastro/styles/style.css
+++ b/18_Projeto_Login_cadastro/styles/style.css
@@ -4,7 +4,6 @@
 }
 
 html{
-    background-color: var(--colors);
     font-family: var(--fonts);
     font-size: 62.5%;
 }
@@ -15,18 +14,28 @@ body{
     justify-content: center;
     align-items: center;
     margin: 0;
+    background-color: var(--colors);
 }
 
 
 .form{
-    border-left: 1rem solid rgba(0, 0, 0, .5);
-    background-color: white;
-    width: 90%;
+    /* border-left: 1rem solid rgba(0, 0, 0, .5); */
+    /* background-color: white; */
+    width: 80%;
     min-width: 45rem;
     max-width: 64rem;
     padding: 1.5rem;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, .3) .5rem, white .8rem);
     
-    
+}
+
+.form__title{
+    font-weight: 300;
+    font-size: 3rem;
+    color: var(--colors);
+    padding-top: 2rem;
+    padding-bottom: 1.5rem;
+
 }
 
 .form fieldset{
@@ -37,9 +46,6 @@ body{
     gap: 1rem;
 }
 
-.form legend{
-    font-size: 1.8rem;
-}
 
 label,
 input{
@@ -48,9 +54,61 @@ input{
     box-sizing: border-box;
 }
 
-.button-form{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
+.form__label{
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    font-weight: 300;
 }
 
+.form__input{
+    padding: .5em 0;
+    font-size: 1.8rem;
+    border-radius: 0;
+    border: none;
+    border-bottom: 1px solid var(--colors);
+    margin-bottom: 1rem;
+    outline: none;
+    transition: padding-left .08s;
+}
+
+.form__input:focus{
+    outline: 2px solid var(--colors);
+    padding-left: .3rem;
+}
+
+
+.button-form{
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.btn{
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    border-radius: 3px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 1rem 1.5rem;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+.btn_primary{
+    background-color: var(--colors);
+    color: white;
+}
+
+.btn_secondary{
+    color: var(--colors)
+}
+
+.form__action__aside{
+    font-size: 1.2rem;
+    flex-grow: 1;
+    text-align: right;
+}
