CheckBox Transform Fim

--- a/20_Transformacoes_2D/style/04_checkbox.css
+++ b/20_Transformacoes_2D/style/04_checkbox.css
@@ -80,3 +80,71 @@
     outline-offset: -2px;
     box-sizing: border-box;
 }
+
+/* Terceiro Checkbox - Botão Switch com acessibilidade */
+    .switch{
+            /* Variaveis dentro do escopo, não saem para outros. */
+        --switch-color: #cfd8dc;
+        --time: .2s;
+
+    }
+
+    .switch span{
+        display: inline-block;
+        width: 2em;
+        height: 1em;
+        border-radius: 1em;
+        outline: 2px solid var(--switch-color);
+        overflow: hidden;
+        position: relative;
+
+    }
+
+    .switch span::after{
+        content: "";
+        display: block;
+        width: 1em;
+        height: 1em;
+        border-radius: 50%;
+        background-color: red;
+        transition: transform var(--time) ease-in-out;
+        transform: translateX(0);
+        position: relative;
+        z-index: 1;
+    }
+    .switch input:checked+span::after{
+        transform: translateX(100%);
+    }
+
+    .switch span::before{
+        content: "";
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        background-color: green;
+        transform: translateX(-100%);
+        position: absolute;
+    }
+
+    .switch input:checked+span::before{
+        transform: translateX(0);
+        transition: transform var(--time) ease-in-out;
+    }
+
+    /* Abaixo propriedades de acessibilidade */
+
+    .switch input[type="checkbox"]{
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: 0;
+        overflow: hidden;
+        position: absolute;
+        outline: none;
+    }
+    /* Propriedade de Borda no elemento */
+    .switch input[type="checkbox"]:focus+span{
+        outline: 3px solid black;   
+        outline-offset: -1px;
+        /* box-sizing: border-box; */
+    }   
