--- a/20_Transformacoes_2D/style/05_gallery.css
+++ b/20_Transformacoes_2D/style/05_gallery.css
@@ -23,8 +23,12 @@ body{
 
 h1{
     /* background-color: red; */
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
     text-align: center;
     font-size: 3em;
+    margin-top: 2em;
+    margin-bottom: .3em;
 }
 
 
@@ -32,17 +36,19 @@ h1{
     background-color: white;
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
-    /* width: 96rem; */
+    justify-content: space-around;
+    gap: .8rem;
+    /* width: 106rem; */
     width: 1060px;
-    /* margin: auto; */
-    padding: 1.6rem ;
+    margin: auto;
+    padding: 1rem ;
+    box-shadow: 0px 0px 30px 6px rgba(0, 0, 0, .6);
+    margin-bottom: 5em;
 }
 
 .image{
-
-    flex-basis: 228px;
-    flex-grow: 1;
+    border: 2px solid green;
+    flex-basis: 250px;
 
 }
 
@@ -53,8 +59,22 @@ h1{
 
 }
 
+a{
+    text-decoration: none;
+    
+}
+
 .desc__image{
-   display: block;
     /* border: 1px solid purple; */
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgba(0, 0, 0, .8);
+    padding: 1em;
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.desc__image:hover{
+    
 }
