--- a/21_Projeto_MyComponents/styles/index.css
+++ b/21_Projeto_MyComponents/styles/index.css
@@ -2,7 +2,7 @@
     --primary-color: #ff7833;
     --secondary-color: #31333b;
     --default-color: #e7e7e7;
-    --bg-color: #444856;
+    --secondary-color-light: #444856;
 }
 
 html{
@@ -16,6 +16,32 @@ body{
     background-color: #ccc;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     min-height: 100vh;
+    line-height: 1.7;
+}
+
+h1{
+    font-size: 4rem;
+    color: #9e9e9e;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+}
+
+h2,h3,h4,h5,h6{
+    color: var(--primary-color);
+    margin: 0;
+}
+
+h2{
+    margin-top: 1.5rem;
+}
+
+article{
+    padding-top: 1px;
+    padding-bottom: 1px;
+}
+
+.main, .main_header{
+    font-size: 1.6rem;
 }
 
 .main_header{
@@ -27,12 +53,49 @@ body{
 }
 
 .main{
-    background-color: var(--bg-color);
+    background-color: var(--secondary-color-light);
     /* flex-grow: 1;
     flex-shrink: 0; */
     flex: 1 0;
+    padding: 6.5rem 6rem 7.5rem;
 }
+
 
 a{
     color: inherit;
+}
+
+.perfil_img{
+    max-width: 10rem;
+}
+
+
+/* Nav */
+.main_nav{
+    text-align: right;
+    padding: 6.5rem 2.4rem 2.4rem;
+}
+
+.main_nav ul{
+    padding: 0;
+    list-style-type: none;
+
+}
+
+.main_nav ul a{
+    display: block;
+    padding: 1.2rem 0;
+    text-decoration: none;
+    background-color: transparent;
+    transition: padding-right .2s, background-color .4s;
+}
+
+.main_nav ul a:hover{
+    background-color: var(--secondary-color-light);
+    padding-right: 1rem;
+}
+
+.main_nav li{
+    border-bottom: 1px solid #7b7b7b;
+    padding: 0.4rem 0;
 }
