Projeto - Mycomponents - Listas

--- a/21_Projeto_MyComponents/styles/index.css
+++ b/21_Projeto_MyComponents/styles/index.css
@@ -111,6 +111,7 @@ a{
 .highlight{
     border-left: 1px solid var(--primary-color);
     font-size: 1.1em;
-    padding-left: 2em;
+    /* padding-left: 2em; */
+    padding: 0 0 0 2em;
     margin-bottom: 2.2em;
 }
