--- a/21_Projeto_MyComponents/styles/index.css
+++ b/21_Projeto_MyComponents/styles/index.css
@@ -3,6 +3,7 @@
     --secondary-color: #31333b;
     --default-color: #e7e7e7;
     --secondary-color-light: #444856;
+    --secondary-color-dark: #23252d;
 }
 
 html{
