--- a/21_Projeto_MyComponents/styles/index.css
+++ b/21_Projeto_MyComponents/styles/index.css
@@ -7,11 +7,9 @@
     --secondary-color-light-transp: #4448565c;
     --secondary-color-dark: #23252d;
 }
-
 html{
     font-size: 62.5%;
 }
-
 body{
     display: flex;
     margin: 0;
@@ -25,37 +23,30 @@ body{
     background-size: cover;
     background-attachment: fixed;
 }
-
 h1{
     font-size: 4rem;
     color: #9e9e9e;
     margin-top: 2rem;
     margin-bottom: 3rem;
 }
-
 h2,h3,h4,h5,h6{
     color: var(--primary-color);
     margin: 0;
 }
-
 h2{
     margin-top: 1.5rem;
 }
-
 article{
     /* padding-top: 1em;
     padding-bottom: 1em; */
     padding: 1em 0;
 }
-
 section{
     margin-bottom: 3rem;
 }
-
 .main, .main_header{
     font-size: 1.6rem;
 }
-
 .main_header{
     /* flex-grow: 0;
     flex-shrink: 0;
@@ -63,7 +54,6 @@ section{
     flex: 0 0 26rem;
     background-color: var(--secondary-color-transp);
 }
-
 .main{
     background-color: var(--secondary-color-light-transp);
     /* flex-grow: 1;
@@ -71,29 +61,25 @@ section{
     flex: 1 0;
     padding: 6.5rem 6rem 7.5rem;
 }
-
-
 a{
     color: inherit;
 }
-
 .perfil_img{
     max-width: 10rem;
 }
-
-
 /* Nav */
 .main_nav{
     text-align: right;
     padding: 6.5rem 2.4rem 2.4rem;
+    /* Menu Fixo */
+    position: sticky;
+    top: 0;
+    left: 0;
 }
-
 .main_nav ul{
     padding: 0;
     list-style-type: none;
-
 }
-
 .main_nav ul a{
     display: block;
     padding: 1.2rem 0;
@@ -101,7 +87,6 @@ a{
     background-color: transparent;
     transition: padding-right .2s, background-color .4s;
 }
-
 /* Animação Menu com Acessibilidade */
 .main_nav ul a:hover,
 .main_nav ul a:focus{
