Projeto - MyComponents - Icons - FinalProjeto

--- a/21_Projeto_MyComponents/styles/index.css
+++ b/21_Projeto_MyComponents/styles/index.css
@@ -63,6 +63,7 @@ section{
 }
 a{
     color: inherit;
+    text-decoration: none;
 }
 .perfil_img{
     max-width: 10rem;
@@ -98,7 +99,6 @@ a{
     border-bottom: 1px solid #7b7b7b;
     padding: 0.4rem 0;
 }
-
 /* Decoração inicio paginas */
 .highlight{
     border-left: 1px solid var(--primary-color);
@@ -106,4 +106,22 @@ a{
     /* padding-left: 2em; */
     padding: 0 0 0 2em;
     margin-bottom: 2.2em;
+}
+
+/* Icones redes sociais */
+.link-icon{
+    display: inline-block;
+    margin-right: 3rem;
+    transition: color .3s;
+    font-style: normal;
+}
+.link-icon:hover{
+    color: var(--primary-color);
+}
+.link-icon .icon{
+    width: 4rem;
+    height: 4rem;
+    vertical-align: middle;
+    display: inline-block;
+    margin-right: 1rem;
 }
