Cores e Imagens - BG imagens e  Linear Gradiente

--- a/22_Cores_e_efeitos/styles/cores.css
+++ b/22_Cores_e_efeitos/styles/cores.css
@@ -1,6 +1,10 @@
 body {
     font-family: sans-serif;
-    background-image: url(../imagens/tile.png);
+    background-image: linear-gradient(to top, transparent 50% , rgb(128 0 128 / .9), green), url(../imagens/tile.png), url(../imagens/tile-pattern.png);
+    background-attachment: fixed, scroll;
+    /* background-blend-mode: color; */
+    /* Linear Gradiente */
+
 }
 
 .cores{
@@ -8,13 +12,19 @@ body {
     border: 8px dashed black;
     margin: 20px auto;
     padding: 26px;
-
-    /* Contador */
-    counter-increment: contador;
 }
 
 .cores p{
     margin: 0;
+}
+
+
+
+/* Contador */
+.cores{
+    /* Contador */
+    counter-increment: contador;
+
 }
 
 section{
@@ -23,4 +33,7 @@ section{
 
 .cores::before{
     content: "[ "counter(contador)" ]";
+    display: inline-block;
+    margin-bottom: 16px;
+    font-weight: bold;
 }
