--- a/22_Cores_e_efeitos/styles/cores.css
+++ b/22_Cores_e_efeitos/styles/cores.css
@@ -1,6 +1,10 @@
+:root{
+    --primary-color: #e10f0f;
+}
+
 body {
     font-family: sans-serif;
-    background-image: linear-gradient(to top, transparent 50% , rgb(128 0 128 / .9), green), url(../imagens/tile.png), url(../imagens/tile-pattern.png);
+    background-image: linear-gradient(to top, rgba(0, 128, 96, 0.9) 50%, transparent 100%), url(../imagens/tile.png), url(../imagens/tile-pattern.png);
     background-attachment: fixed, scroll;
     /* background-blend-mode: color; */
     /* Linear Gradiente */
@@ -9,7 +13,9 @@ body {
 
 .cores{
     width: 80%;
-    border: 8px dashed black;
+    /* A propriedade 'color-mix' faz a mistura de cores */
+    --color: color-mix(in srgb, var(--primary-color), transparent 40%);
+    border: 8px dashed var(--color);
     margin: 20px auto;
     padding: 26px;
 }
