Cores e Imagens - Gradiente pt1

--- a/22_Cores_e_efeitos/styles/cores.css
+++ b/22_Cores_e_efeitos/styles/cores.css
@@ -67,3 +67,13 @@ section{
     background-color: hsla(39, 100%, 35%, 0.3) ;
     box-shadow: 0 15px 6px -7px hsla(39, 100%, 75%, 0.7) ;
 }
+
+.cores:nth-of-type(5){
+    background-image: linear-gradient(70deg, blue, transparent), 
+    linear-gradient(to top, red, transparent);
+    background-clip: padding-box;
+}
+
+.cores:nth-of-type(6){
+    background-image: radial-gradient(circle, blue, red , green, yellow);
+}
