Cores e Imagens - Gradiente pt2

--- a/22_Cores_e_efeitos/styles/cores.css
+++ b/22_Cores_e_efeitos/styles/cores.css
@@ -77,3 +77,94 @@ section{
 .cores:nth-of-type(6){
     background-image: radial-gradient(circle, blue, red , green, yellow);
 }
+
+.cores:nth-of-type(7){
+    background-image: radial-gradient(ellipse, blue, red , green, yellow);
+}
+
+.cores:nth-of-type(8){
+    background-image: radial-gradient(circle at right top, blue, #f008);
+}
+
+.cores:nth-of-type(9){
+    background-image: radial-gradient(ellipse at 15% top, blue, #f008);
+}
+
+.cores:nth-of-type(10){
+    background-image: radial-gradient(closest-corner at 50px 20px, blue, #f008);
+}
+
+.cores:nth-of-type(11){
+    background-image: radial-gradient(farthest-corner at 50px 20px, blue, #f008);
+}
+
+.cores:nth-of-type(12){
+    background-image: radial-gradient(closest-side at 50px 20px, blue, #f008);
+}
+
+.cores:nth-of-type(13){
+    background-image: radial-gradient(farthest-side at 50px 20px, blue, #f008);
+}
+
+.cores:nth-of-type(14){
+    background-image: radial-gradient(circle farthest-side at 50px 20px, blue, #f008);
+}
+
+.cores:nth-of-type(15){
+    background-image: conic-gradient(from 45deg, red 50%, blue, green);
+}
+
+.cores:nth-of-type(16){
+    background-image: conic-gradient(#f00, #ff0, #0ff, #00f,#f00);
+   filter: blur(5px);
+}
+
+.cores:nth-of-type(17){
+    background-image: conic-gradient(#f00, #ff0, #0ff, #00f,#f00);
+   /* filter: hue-rotate(180deg); */
+   transition: filter 1s linear;
+}
+
+.cores:nth-of-type(17):hover{
+    /* Esse filtro pode ser aplicado em Graus 'xdeg' ou em 'turn' */
+    filter: hue-rotate(180deg);
+}
+
+.cores:nth-of-type(18){
+    background-image: conic-gradient(#f00, #ff0, #0ff, #00f,#f00);
+    transition: filter 5s linear;
+    /* 'aspect-ratio' serve para aumentar a proporção da imagem */
+    aspect-ratio: 16 / 9;
+}
+
+.cores:nth-of-type(18):hover{
+    /* Esse filtro pode ser aplicado em Graus 'xdeg' ou em 'turn' */
+    filter: hue-rotate(10turn);
+}
+
+.cores:nth-of-type(19){
+    background-image: repeating-linear-gradient(to top right, white 0px, white 5px, black 5px, black 10px);
+}
+
+.cores:nth-of-type(20){
+    background-image: repeating-radial-gradient(white 0px, white 10px, black 10px, black 20px);
+}
+
+.cores:nth-of-type(21){
+    /* 'conic-gradient' sempre precisa ser trabalhado em graus 'xdeg' */
+    background-image: repeating-conic-gradient(white 0deg, white 10deg, black 10deg, black 20deg);
+}
+    
+.cores:nth-of-type(22){
+    background-image: 
+    repeating-conic-gradient(transparent 0deg, transparent 10deg, black 10deg, black 20deg),
+    repeating-radial-gradient(red 0%, transparent, blue 20%);
+    background-attachment: fixed scroll;
+}
+
+.cores:nth-of-type(23){
+    background-image: 
+    repeating-radial-gradient(red 0%, transparent, blue 20%),
+    repeating-linear-gradient(red, blue);
+    background-attachment: fixed scroll;
+}
