Cores e Imagens - Gradiente pt3 - Final

--- a/22_Cores_e_efeitos/styles/cores.css
+++ b/22_Cores_e_efeitos/styles/cores.css
@@ -168,3 +168,21 @@ section{
     repeating-linear-gradient(red, blue);
     background-attachment: fixed scroll;
 }
+
+.cores:nth-of-type(24){
+    box-shadow: 10px 10px 6px rgba(0, 0, 0, .8);
+}
+
+.cores:nth-of-type(25){
+    filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, .8));
+}
+
+.cores:nth-of-type(26){
+    background-image: linear-gradient( to top right, transparent 50%, red 50%);
+    box-shadow: 10px 10px 6px rgba(0, 0, 0, .8);
+}
+
+.cores:nth-of-type(27){
+    background-image: linear-gradient( to top right, transparent 50%, red 50%);
+    filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, .8));
+}
