--- a/22_Cores_e_efeitos/styles/post-it.css
+++ b/22_Cores_e_efeitos/styles/post-it.css
@@ -3,25 +3,86 @@ html{
 }
 
 body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: rgb(165, 42, 42);
 }
 
+h1{
+    font-size: 4.8rem;
+    font-weight: lighter;
+    text-align: center;
+}
+
+h2{
+    margin: 0;
+}
+
+p{
+    font-size: 1.6rem;
+}
+
+.cards-container{
+    display: flex;
+    gap: 2.5rem;
+    flex-wrap: wrap;
+    width: 80%;
+    margin: 0 auto;
+}
+
+/* 
+passo 1
 .card{
-    background-color: white;
-    width: 300px;
-    height: 200px;
-    box-shadow: 8px 5px 5px rgba(0, 0, 0, .5);
-    background-color: #ccc;
-    background-image: linear-gradient(to left top, #ccc 93% , brown 1% );
-    filter: drop-shadow(5px 5px 5px rgba(165, 42, 42, .8));
- }
+    width: 35rem;
+    background-image: linear-gradient(135deg, transparent 25px, white 25px);
+    filter: drop-shadow(0 0 5px black);
+    padding: 40px 30px 30px 50px;
+    box-sizing: border-box;
+ } */
 
- .card h2{
-    padding: 25px;
+.card_title{
     margin: 0;
- }
+    font-weight: lighter;
+    font-size: 2.5rem;
+}
 
- .card p{
-    margin: 0;
-    padding: 25px;
- }
+
+/*
+Passo 2 - Nâo é possivel colocar sombra!!
+.card{
+    width: 35rem;
+    background-image: linear-gradient(135deg, transparent 25px, grey 25px),
+                    linear-gradient(135deg, transparent 25px, white 25px);
+    background-size: 34px 34px, 100%;
+    background-repeat: no-repeat;
+    filter: drop-shadow(0 0 5px black);
+    padding: 40px 30px 30px 50px;
+    box-sizing: border-box; }*/
+
+
+
+
+.card{
+    /* width: 35rem; */
+    /* flex-basis: calc(33% - 2.5rem); */
+    /* METODO CLAMP(min, ideal, max) */
+    flex-basis: clamp(30rem, calc(33% - 2.5rem), 40rem);
+    flex-grow: 1;
+    background-image: linear-gradient(135deg, transparent 25px, white 25px);
+    filter: drop-shadow(0 0 5px black);
+    padding: 40px 30px 30px 50px;
+    box-sizing: border-box;
+    position: relative;
+    }
+
+.card::before{
+    content: "";
+    display: block;
+    width: 34px;
+    height: 34px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, .3));
+    background-image: 
+        linear-gradient(135deg, transparent 25px, rgb(153, 153, 153) 25px);
+}
