Cores e Efeitos - Clip-path - Ferramenta

--- a/22_Cores_e_efeitos/styles/clip-path.css
+++ b/22_Cores_e_efeitos/styles/clip-path.css
@@ -77,3 +77,7 @@ p{
 #d5{
     clip-path: inset(30px round 50px 20px 10px 0 / 20px 50px 35px 10%);
 }
+
+/*
+ Usar a ferramenta para usar o clip-path
+https://bennettfeely.com/clippy/ */
