Responsividade - Media Queries - Coments

--- a/23_Responsividade/styles/02_media_queries.css
+++ b/23_Responsividade/styles/02_media_queries.css
@@ -1,7 +1,7 @@
 .label span{
     display: none;
 }
-
+/* Exemplo de responsividade */
 /* Media Queries */
 @media screen and (min-width:960px){
     body{
