--- a/23_Responsividade/styles/02_media_queries.css
+++ b/23_Responsividade/styles/02_media_queries.css
@@ -1,6 +1,7 @@
 .label span{
     display: none;
 }
+
 /* Exemplo de responsividade */
 /* Media Queries */
 @media screen and (min-width:960px){
@@ -32,4 +33,14 @@
     #res3{
         display: initial;
     }
+}
+
+a{
+    color: white;
+}
+
+.teste{
+    background-color: orange;
+    width: 350px;
+    height: 200px;
 }
