--- a/23_Responsividade/styles/05_container.css
+++ b/23_Responsividade/styles/05_container.css
@@ -1,29 +1,36 @@
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
+.cards_container{
+display: flex;
+flex-direction: column;
+gap: 1em;
 }
 
 .card{
     border: 2px solid #999;
+    display: flex;
+    flex-direction: column;
 }
 
 .card_header img{
     display: block;
 
     width: 100%;
+    height: 100%;
     max-height: 10em;
     /* a 'object-fit' tem as propriedades parecidas com 'background-size */
     object-fit: cover;
     /* 'object-position', vai posicionar a imagem */
     object-position: center;
-
-    
 }
 
 .card_body{
     padding: 1em;
     box-sizing: border-box;
     background-color: #ccc;
+    flex-grow: 1;
 }
 
 .card_body p{
@@ -41,4 +48,25 @@ body{
 }
 .card_btn:hover{
     background-color: #373737;
+}
+
+/* Acima formatação para celular */
+
+/* abaixo formatação para outros dispositivos */
+
+/*  */
+@media screen and (min-width: 50em){
+    .card{
+        flex-direction: row;
+    }
+
+    .card_header img{
+        max-height: initial;
+    }
+}
+
+@media screen and (min-width: 70em){
+    .cards_container{
+        flex-direction: row;
+    }
 }
