--- a/23_Responsividade/styles/05_container.css
+++ b/23_Responsividade/styles/05_container.css
@@ -8,6 +8,12 @@ flex-direction: column;
 gap: 1em;
 }
 
+.card_wrapper, 
+main{
+    /*  */
+    container-type: inline-size;
+}
+
 .card{
     border: 2px solid #999;
     display: flex;
@@ -54,8 +60,8 @@ gap: 1em;
 
 /* abaixo formatação para outros dispositivos */
 
-/*  */
-@media screen and (min-width: 50em){
+/* @media screen and (min-width: 50em){ */
+@container (min-width: 50em){
     .card{
         flex-direction: row;
     }
@@ -65,8 +71,15 @@ gap: 1em;
     }
 }
 
-@media screen and (min-width: 70em){
+/* @media screen and (min-width: 70em){ */
+@container (min-width: 70em){
     .cards_container{
         flex-direction: row;
     }
+
+    .card_wrapper{
+        flex-grow: 1;
+    }
 }
+
+
